--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -26,7 +26,7 @@
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
     <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Workflow">
     <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-      Sign in to your account
+      Log in to your account
     </h2>
     <p class="mt-2 text-center text-sm text-gray-600">
       Or
@@ -74,7 +74,7 @@
 
         <div>
           <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"  >
-            Sign in
+            Log in
           </button>
         </div>
       </form>
