--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -46,7 +46,7 @@
 					</nav>
 					<div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0">
 						<a href="/login" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">
-							Sign in
+							Log in
 						</a>
 						<a href="/signup"
 							class="ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700">
