--- a/views/login.hbs
+++ b/views/login.hbs
@@ -22,12 +22,11 @@
   <body class="h-full">
   ```
 -->
-
 <div class="min-h-full flex flex-col justify-center py-12 sm:px-6 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
     <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Workflow">
     <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-      Sign up to your account
+      Log in to your account
     </h2>
     <p class="mt-2 text-center text-sm text-gray-600">
       Or
@@ -39,7 +38,7 @@
 
   <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
     <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-      <form class="space-y-6" action="/signup" method="POST">
+      <form class="space-y-6" action="login" method="POST">
         <div>
           <label for="email" class="block text-sm font-medium text-gray-700">
             Email address
@@ -74,8 +73,8 @@
         </div>
 
         <div>
-          <button class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-            Sign in
+          <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"  >
+            Log in
           </button>
         </div>
       </form>
